- topPanel redesigned according to #248 requirements  - tab labels always visible to enable notifications  - on clicking labels they show/hide - (s)css fixed and included for bottomPanel and topPanel

--- a/src/frontend/app/components/knalledgeMap/sass/default.scss
+++ b/src/frontend/app/components/knalledgeMap/sass/default.scss
@@ -867,7 +867,7 @@ md-sidenav{
 .knalledge_map_middle_bottom{
 	position: relative;
 	width: 100%;
-	height: 10em;
+	//height: 10em;
 	overflow-y: scroll; // TODO: workaround
 }
 
