--- a/src/frontend/app/components/topPanel/css/topPanel.css
+++ b/src/frontend/app/components/topPanel/css/topPanel.css
@@ -1,4 +1,3 @@
-/*http://stackoverflow.com/questions/8061166/syntax-to-include-separate-sass-file*/
 /* @import "normalize"; */
 /*
 $medium: 800px;
@@ -10,13 +9,22 @@ $large: 1400px;
 	http://stackoverflow.com/questions/10808413/css3-box-sizing-margin-box-why-not
 */
 * {
-
   margin: 0px;
   padding: 0px;
   -moz-box-sizing: border-box;
   -webkit-box-sizing: border-box;
   box-sizing: border-box; }
 
-  
+.top_panel {
+  margin: 0px;
+  padding: 0px;
+  -moz-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box; }
+  .top_panel .tab_content {
+    display: none;
+    max-height: 15em; }
+  .top_panel .tab_block {
+    display: block; }
 
-/*# sourceMappingURL=default.css.map */
+/*# sourceMappingURL=topPanel.css.map */
